--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:src="@drawable/ic_arrow_back"
+        android:contentDescription="@string/back_btn_content_description"
         app:layout_constraintBottom_toTopOf="@+id/back_btn_h_guideline"
         app:layout_constraintEnd_toStartOf="@+id/back_btn_v_guideline"
         app:layout_constraintHorizontal_bias="0.75"
@@ -40,7 +41,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/username_sign_up"
         app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +54,7 @@
             android:id="@+id/username_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/username_sign_up"
             android:maxLength="12" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -65,7 +66,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/first_name_sign_up"
         app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,6 +79,7 @@
             android:id="@+id/first_name_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/first_name_sign_up"
             android:maxLength="15" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -90,7 +91,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/last_name_sign_up"
         app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +104,7 @@
             android:id="@+id/last_name_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/last_name_sign_up"
             android:maxLength="15" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -115,7 +116,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/email_sign_up"
         app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,6 +129,7 @@
             android:id="@+id/email_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/email_sign_up"
             android:maxLength="30" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -140,7 +141,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/phone_sign_up"
         app:errorEnabled="true"
         app:endIconMode="clear_text"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,6 +155,7 @@
             android:id="@+id/phone_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/phone_sign_up"
             android:maxLength="9" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -166,7 +167,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
-        android:hint="@string/password_sign_up"
         app:errorEnabled="true"
         android:inputType="textPassword"
         app:endIconMode="password_toggle"
@@ -181,6 +181,7 @@
             android:id="@+id/password_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/password_sign_up"
             android:maxLength="15" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -193,7 +194,6 @@
         android:layout_marginStart="@dimen/login_layout_margin"
         android:layout_marginEnd="@dimen/login_layout_margin"
         app:errorEnabled="true"
-        android:hint="@string/confirm_password_sign_up"
         android:inputType="textPassword"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -207,6 +207,7 @@
             android:id="@+id/confirm_password_sign_up_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:hint="@string/confirm_password_sign_up"
             android:maxLength="15" />
 
     </com.google.android.material.textfield.TextInputLayout>
