--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -179,5 +179,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/confirm_password_sign_up" />
 
+        <LinearLayout
+            android:id="@+id/hint_login_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@id/sign_up_btn">
+
+            <TextView
+                style="@style/Widget.Scannera.TextView"
+                android:id="@+id/check_spam_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/already_have_an_acc_hint"
+                android:textSize="@dimen/small_text_size" />
+
+            <TextView
+                style="@style/Widget.Scannera.TextView"
+                android:id="@+id/login_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:layout_marginStart="6dp"
+                android:text="@string/login_here"
+                android:textSize="@dimen/small_text_size" />
+        </LinearLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
