--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -59,14 +59,15 @@
         android:layout_marginStart="@dimen/general_btn_margin"
         android:layout_marginEnd="@dimen/general_btn_margin"
         android:layout_marginBottom="24dp"
+        android:gravity="center"
         android:text="@string/provide_feedback"
         app:icon="@drawable/ic_feedback"
         app:iconGravity="textStart"
-        android:gravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/statements_url"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/about_us_description" />
+        app:layout_constraintTop_toBottomOf="@+id/about_us_description"
+        app:layout_constraintVertical_bias="0.8" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/description_guideline"
@@ -74,5 +75,34 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.25" />
+
+    <LinearLayout
+        android:id="@+id/statements_url"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="24dp">
+
+    <TextView
+        style="@style/Widget.Scannera.TextView"
+        android:id="@+id/privacy_policy_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/privacy_policy"
+        android:textSize="@dimen/small_text_size"
+        android:layout_gravity="center"/>
+
+    <TextView
+        style="@style/Widget.Scannera.TextView"
+        android:id="@+id/terms_and_conditions_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/terms_and_conditions"
+        android:textSize="@dimen/small_text_size"
+        android:layout_gravity="center"/>
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
